removing division error

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="row4">
                     <button onclick="controlDecimal('.')">.</button>
                     <button onclick="document.getElementById('disp').value += '0' ">0</button>
-                    <button onclick="enterSymbol('*')">/</button>
+                    <button onclick="enterSymbol('/')">/</button>
                     <button onclick="enterSymbol('*')">X</button>
                 </div>
                 <div class="row5">
